--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -586,6 +586,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3], dtype=uint8)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Multiclass Classification\n",
+    "sgd_clf.fit(X_train, y_train)\n",
+    "sgd_clf.predict([some_digit])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
